[package]
name = "pi_orca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
pi_spatial = "0.4"
nalgebra = "0.32"
pi_slotmap="0.1"
parry2d = "0.13"
pi_path_finding = "0.3"
# rand = "0.8"

# 减小release版本动态库的体积
[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"