[package]
name = "pi_orca"
version = "0.3.3"
edition = "2021"
description = "A* Path Finding Algorithm"
repository = "https://github.com/GaiaWorld/pi_orca.git"
license = "MIT OR Apache-2.0"
keywords = ["orca", "orca2", "pi_orca"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pi_spatial = "0.4"
nalgebra = "0.32"
pi_slotmap="0.1"
parry2d = "0.13"
wasm-bindgen = { version ="0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.rand]
version = "0.8"
optional = true


# 减小release版本动态库的体积
[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"